force-app/main/default/objects/FieloPLT__Challenge__c/FieloPLT__Challenge__c.object-meta.xml
<CustomObject>
    <description>Challenges encourage your community to engage in defined activities. They are made up of Missions that Members from a Program need to accomplish. Challenges can grant Challenge Rewards.</description>
    <label>Challenge</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Challenges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>