force-app/main/default/objects/FieloPLT__Challenge__c/fields/FieloPLT__AcomplishAction__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__AcomplishAction__c</fullName>
    <description>It defines if a Member subscribed to a specific Challenge who obtained a Challenge Reward continues participating in the Challenge. If Accomplished Action is &quot;Finished&quot;, Members do not continue. If Accomplished Action is &quot;Continue&quot;, Members can still participate and obtain other Challenge Rewards. Accomplished Action is &quot;Repeat&quot;, Members can still participate and obtain the same Challenge Rewards indefinetely as defined in the Challenge Reward.</description>
    <inlineHelpText>It defines if a Member subscribed to a specific Challenge who obtained a Challenge Reward continues participating in the Challenge.</inlineHelpText>
    <label>Accomplished Action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Finish</fullName>
                <default>true</default>
                <label>Finish</label>
            </value>
            <value>
                <fullName>Repeat</fullName>
            </value>
            <value>
                <fullName>Continue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>