force-app/main/default/objects/FieloPLT__Challenge__c/fields/FieloPLT__DeliverRewards__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__DeliverRewards__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If ticked, Challenge can grant Challenge Rewards while being &quot;Active&quot;. It can only be applied to Challenges under &quot;Singular&quot;, &quot;Time Table&quot; or &quot;Level Table&quot; types. For &quot;Position Range&quot;, &quot;Value Range&quot; or &quot;Mission Table&quot; types, Challenge Rewards are granted when Challenge status is &quot;Completed&quot; (i.e. it meets its &quot;Final Date&quot;).</description>
    <inlineHelpText>If ticked, Challenge can grant Challenge Rewards while being &quot;Active&quot;. It can only be applied to Challenges under &quot;Singular&quot;, &quot;Time Table&quot; or &quot;Level Table&quot; types.</inlineHelpText>
    <label>Challenge Reward Delivery</label>
    <type>Checkbox</type>
</CustomField>