force-app/main/default/objects/FieloPLT__Challenge__c/fields/FieloPLT__EndDate__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__EndDate__c</fullName>
    <description>Challenge final date. If no Final date is established, Challenge lasts indefinetely as long as it remains &quot;Active&quot;.</description>
    <inlineHelpText>Choose a date for the Challenge to end. If blank, the Challenge will last as long as it remains Active.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>