force-app/main/default/objects/FieloPLT__Challenge__c/fields/FieloPLT__IsProcessed__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__IsProcessed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If ticked, Challenge is processed thus delivering the appropiate Challenge Reward.</description>
    <inlineHelpText>If ticked, Challenge is processed and it delivers the appropiate Challenge Reward.</inlineHelpText>
    <label>Processed</label>
    <type>Checkbox</type>
</CustomField>