force-app/main/default/objects/FieloPLT__Challenge__c/fields/FieloPLT__MissionCounter__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__MissionCounter__c</fullName>
    <description>Total number of Missions with Objective, regardless of their Status.</description>
    <inlineHelpText>Total number of Missions with Objective, regardless of their Status.</inlineHelpText>
    <label>Mission Counter</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>