force-app/main/default/objects/FieloPLT__Challenge__c/fields/FieloPLT__Program__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Program__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Program where the Challenge belongs to.</description>
    <inlineHelpText>This is the Program you&apos;re implementing the Challenge in.</inlineHelpText>
    <label>Program</label>
    <referenceTo>FieloPLT__Program__c</referenceTo>
    <relationshipLabel>Challenges</relationshipLabel>
    <relationshipName>Challenges</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>