force-app/main/default/objects/FieloPLT__Challenge__c/fields/FieloPLT__Segment__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Segment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Targets the Challenge by Segment. When using this field, only the Members who are part of the selected Segment(s) can be subscribed to the Challenge. Segments are configured in the Programs tab.</description>
    <inlineHelpText>To target your Challenge by Segment, add the Segment(s) you want to make eligible. If blank, all Program Members will be eligible. You can view, edit and create Segments in the Programs tab.</inlineHelpText>
    <label>Segment</label>
    <referenceTo>FieloPLT__Segment__c</referenceTo>
    <relationshipLabel>Challenges</relationshipLabel>
    <relationshipName>Challenges</relationshipName>
    <type>Lookup</type>
</CustomField>