force-app/main/default/objects/FieloPLT__Challenge__c/fields/FieloPLT__StartDate__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__StartDate__c</fullName>
    <description>Date when the Challenge starts. Challenges must always include an Initial date.</description>
    <inlineHelpText>Choose a date for the Challenge to begin. Challenges must have a start date.</inlineHelpText>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>