force-app/main/default/objects/FieloPLT__Challenge__c/fields/FieloPLT__Status__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Status__c</fullName>
    <description>Challenge status: Draft, Pending, Active, Scheduled, Completed and Inactive.</description>
    <inlineHelpText>Choose the Challenge status.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>