force-app/main/default/objects/FieloPLT__Challenge__c/fields/FieloPLT__Subscription__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Subscription__c</fullName>
    <description>Different ways in which Members can be enrolled in a Challenge. Subscription Mode may be: Closed  - Members are manually subscribed to a Challenge, Open - Members can subscribe themselves and Global - Members are automatically subscribed to an active Challenge when they perform an Action evaluated by a Mission.</description>
    <inlineHelpText>Choose how Members can subscribe to the Challenge. When &quot;Closed&quot;, you must manually subscribe Members. When &quot;Open&quot;, Members can subscribe themselves. When &quot;Global&quot;, Members are automatically subscribed upon performing a Mission Action.</inlineHelpText>
    <label>Subscription Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Closed</fullName>
                <default>true</default>
                <label>Closed</label>
            </value>
            <value>
                <fullName>Global</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>