force-app/main/default/objects/FieloPLT__Challenge__c/fields/FieloPLT__TableType__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__TableType__c</fullName>
    <description>Lists and filters Challenge Rewards depending on the Missions. Table types include the following: Singular Table, Time Table, Level Table, Mission Table, Position Range and Value Range.</description>
    <inlineHelpText>Select how you&apos;ll prioritize your Challenge Rewards. See Fielo documentation for details on each Table Type.</inlineHelpText>
    <label>Table Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Singular</fullName>
            </value>
            <value>
                <fullName>Time Table</fullName>
            </value>
            <value>
                <fullName>Mission Table</fullName>
            </value>
            <value>
                <fullName>Level Table</fullName>
            </value>
            <value>
                <fullName>Position Range</fullName>
            </value>
            <value>
                <fullName>Value Range</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>