force-app/main/default/objects/FieloPLT__Challenge__c/fields/FieloPLT__TrackerMode__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__TrackerMode__c</fullName>
    <description>It allows you to choose if a Tracker is inserted (Stored) or not (Unstored) in the database.</description>
    <inlineHelpText>Choose &quot;Stored&quot; to generate a Tracker for this Challenge. If &quot;Unstored&quot; is chosen, no Tracker is generated.</inlineHelpText>
    <label>Tracker Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stored</fullName>
                <default>true</default>
                <label>Stored</label>
            </value>
            <value>
                <fullName>Unstored</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>