force-app/main/default/objects/FieloPLT__Challenge__c/validationRules/FieloPLT__DateValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloPLT__DateValidation</fullName>
    <active>true</active>
    <description>The End Date must be on or after the Start Date.</description>
    <errorConditionFormula>NOT(ISNULL(FieloPLT__StartDate__c)) &amp;&amp; 
NOT(ISNULL(FieloPLT__EndDate__c)) &amp;&amp; 
FieloPLT__EndDate__c &lt; FieloPLT__StartDate__c</errorConditionFormula>
    <errorDisplayField>FieloPLT__EndDate__c</errorDisplayField>
    <errorMessage>The End Date must be on or after the Start Date.</errorMessage>
</ValidationRule>